fixed cross overflow bug

--- a/front/src/widgets/ModalGallery/ModalGallery.module.scss
+++ b/front/src/widgets/ModalGallery/ModalGallery.module.scss
@@ -5,7 +5,7 @@
     align-items: center;
     max-width: 100vw;
     width: 100vw;
-    height: 100vh;
+    min-height: 100%;
     border-radius: 0;
 }
 
@@ -84,6 +84,7 @@
     display: flex !important;
     justify-content: center;
     align-items: center;
+    align-self: center;
 }
 
 .slideContainer {
